samples/errors/for.our
int i;
main()
{
for(;10 > 20;)
{
break;
}
}

/*
Instruction 'for' is not supported.  Line: 4
*/